--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "nesbot/carbon": "^2.43",
         "spatie/laravel-sluggable": "^2.2"
     },
     "require-dev": {
